@@ -253,7 +253,6 @@
                         <include>**/*Test.java</include>
                         <include>**/*Spec.java</include>
                     </includes>
-                    <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
                 </configuration>
             </plugin>
         </plugins>
